--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
         <dependency>
             <groupId>org.openprovenance.prov</groupId>
             <artifactId>prov-interop-light</artifactId>
-            <version>0.9.28</version>
+            <version>0.9.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openprovenance.prov</groupId>
+            <artifactId>prov-xml</artifactId>
+            <version>0.9.27</version>
         </dependency>
     </dependencies>
 
