--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,24 @@
 
     <groupId>org</groupId>
     <artifactId>BThesis-ProvenanceChain</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <openprovenance.version>0.9.31</openprovenance.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openprovenance.prov</groupId>
             <artifactId>prov-model</artifactId>
-            <version>0.9.31</version>
+            <version>${openprovenance.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openprovenance.prov</groupId>
             <artifactId>prov-interop-light</artifactId>
-            <version>0.9.31</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openprovenance.prov</groupId>
-            <artifactId>prov-xml</artifactId>
-            <version>0.9.31</version>
+            <version>${openprovenance.version}</version>
         </dependency>
     </dependencies>
-
 </project>
