--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,23 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <openprovenance.version>0.9.31</openprovenance.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openprovenance.prov</groupId>
             <artifactId>prov-model</artifactId>
-            <version>${openprovenance.version}</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openprovenance.prov</groupId>
             <artifactId>prov-interop-light</artifactId>
-            <version>${openprovenance.version}</version>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.23.0</version>
         </dependency>
     </dependencies>
 </project>
