--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "src/main/resources/bthesis-provenancechain-digpat"]
+	path = src/main/resources/bthesis-provenancechain-digpat
+	url = https://gitlab.ics.muni.cz/492601/bthesis-provenancechain-digpat.git
